fix filter button on mobile

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_article-filters.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_article-filters.sass
@@ -230,6 +230,7 @@
 .margin-mob-fliter-btn
     margin-top: -42px
     z-index: 10
+    width: 100px
     @include breakpoint(desktop, up)
         margin-top: auto
 
